--- a/src/modules/cart/cart.template.html
+++ b/src/modules/cart/cart.template.html
@@ -1,1 +1,32 @@
-<p>cart works!</p>
+<div class="container">
+	@if (products()?.length) {
+	<div class="text-2xl cart-border">Ваш заказ</div>
+
+	@for (product of products(); track product.id) {
+	<div class="flex items-center space-x-10 my-6">
+		<img class="max-w-16" [src]="product.url" alt="product" />
+		<div>
+			<div class="text-base font-bold uppercase">{{ product.title }}</div>
+			<div class="text-gray-500">Размер: {{ product.size }}</div>
+		</div>
+		<div>
+			<div class="text-base font-bold">{{ product.count }}</div>
+		</div>
+		<div class="flex-1 flex items-center justify-end">
+			<button
+				tuiIconButton
+				icon="tuiIconTrash2Large"
+				appearance="icon"
+				(click)="remove(product)"
+			></button>
+		</div>
+	</div>
+	}
+	<div class="cart-border"></div>
+	<div class="text-right text-base font-bold mt-4">
+		Итого: {{ total() }} {{ currency()! | tuiCurrency }}
+	</div>
+	} @else {
+	<div class="text-xl mt-4">Корзина пуста</div>
+	}
+</div>
