--- a/src/modules/shop/shop.template.html
+++ b/src/modules/shop/shop.template.html
@@ -1,1 +1,10 @@
-<p>shop works!</p>
+<div
+	class="p-5 grid grid-cols-7 gap-4 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-5"
+>
+	@for (product of products(); track product) {
+	<ce-product
+		[product]="product"
+		(toProduct)="toProduct($event)"
+	></ce-product>
+	}
+</div>
